finimalism7.css
/* ... */
body {
    font-family: "Nunito", sans-serif;
    font-size: 12pt;
}

.layout-mobile body {
    font-size: 12pt;
}

h2 {
  font-size: 1.3em;
}

/* Movies / Shows gallery titles */
.layout-desktop .card,
.layout-tv .card {
    font-size: 1em;
}

.cardScalable {
	margin-bottom: 0.2em;
}

.textActionButton {
  font-size: 1.1em;
  transition: color 0.3s, font-weight 0.3s;
}

.textActionButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #15afe6;
  font-weight: 700;
}

.cardText-secondary, .fieldDescription, .guide-programNameCaret, .listItem .secondary, .nowPlayingBarSecondaryText, .programSecondaryTitle, .secondaryText {
  color: rgba(255, 255, 255, 0.75);
}

/* Movies / Shows gallery titles */
.layout-mobile .card {
    font-size: 12pt !important;
}

@media (min-height: 31.25em) {
  [dir="ltr"] .padded-right-withalphapicker {
    padding-left: max(env(safe-area-inset-left),3.7%);
    padding-right: 7.5%;
    padding-right: max(env(safe-area-inset-right),3.5%);
  }
}

.parentName {
  margin: 0 0 0;
}

.hide + .detailPageWrapperContainer .itemName {
  display: none !important;
}

/* Font size for release year, ratings */
div.itemMiscInfo.itemMiscInfo-primary {
    font-size: 12pt;
}

.layout-desktop div.itemMiscInfo.itemMiscInfo-primary,
.layout-tv div.itemMiscInfo.itemMiscInfo-primary {
    font-size: 12pt;
}

/* Font size for the description */
p.overview.detail-clamp-text {
    font-size: 12pt; 
	color: #fff;
	font-weight: 600;
}

/* Font size for the description */
.layout-mobile p.overview.detail-clamp-text {
    font-size: 12pt; 
}

/* Font for the Movies, TV and Live TV buttons */
span.homeLibraryText {
    font-family: "Nunito", sans-serif;
    font-size: 1.2em;
	transform: translateY(5%);
}

.layout-mobile span.homeLibraryText {
    font-size: 12pt;
}

/* Position card progress bar */
.innerCardFooter.fullInnerCardFooter.innerCardFooterClear {
    background: rgba(0, 0, 0, 0);
    right: 0;
    left: 0;
    top: 0;
    bottom: 0;
    margin: 0;
}

/* Apply progress bar gradient */
.itemProgressBarForeground {
    background: linear-gradient(90deg, rgb(1, 9, 40) 0%, rgb(36, 75, 147) 45%, rgb(23, 125, 255) 85%, rgb(24, 170, 222) 100%);}

/*Raise detailPage detailRibbon */

.itemBackdrop {
  height: 25.5em !important;
  display: inherit;
}

.layout-desktop .detailRibbon,
.layout-tv .detailRibbon {
  margin-top: 0;
  padding-top: 0em;
  padding-bottom: 0em;
}

.layout-tv .detailRibbon {
	margin-top: -4em !important;
}

.layout-desktop .detailImageContainer .card,
.layout-tv .detailImageContainer .card {
  top: 18vh;
}

[dir="ltr"] .detailPageContent {
  padding-left: 31em;
  padding-right: 0%;
}


.layout-desktop .itemName.infoText.parentNameLast,
.layout-tv .itemName.infoText.parentNameLast {
    display: block;
	text-align: center;
	white-space: normal;
}

.layout-desktop [dir="ltr"] .detailPagePrimaryContainer, .layout-tv [dir="ltr"] .detailPagePrimaryContainer {
  padding-left: 31em;
}

.hide+.detailPageWrapperContainer .itemName {
    display: block !important;
}

.itemName {
    margin: .5em 0 !important;
}

.layout-mobile .itemName.infoText.parentNameLast {
    display: block;
    font-size: 1.3em;
}

/* Color and style changes for the dark theme type*/
:root {--selection: 170, 95, 200;}

.backgroundContainer.withBackdrop {
    background-color: rgba(0, 0, 0, 0);
}

.emby-select-withcolor > option {
  color: inherit;
  background: #11091d;
}

/* Dashboard*/

#user_usage_report_table,
.detailTable {
    background: rgba(0,0,0,.5);
}
.detailTableBodyRow-shaded {
    background: #0000 !important;
}

.infoBanner {
    background: #101010;
}
.navMenuOptionText {
    margin-top: 0;
}
.backgroundProgress > div {
    background-color: #0000;
}

.visualCardBox, .cardImageContainer {
  box-shadow: none;
}

.mdl-switch__input:checked + .mdl-switch__label + .mdl-switch__trackContainer > .mdl-switch__track {
    background: rgba(120, 120, 120, 0.6);
}
.mdl-switch__input:checked + .mdl-switch__label + .mdl-switch__trackContainer > .mdl-switch__thumb {
    background: white;
}

.dashboardSection h3 {
  margin-left: 0.5em;
}
.sessionCardFooter {
  border: none;
}
.paperList, 
.visualCardBox {
  background-color: rgba(0, 0, 0, 0.5);
}
.listItem-border {
  border-color: rgba(255, 255, 255, 0) !important; 
}
fieldset {
  border: 1px solid rgba(4, 4, 4, 0.8); 
  border-radius: 0.4em;
}

/* detailRibbon transparency*/
.layout-desktop .detailRibbon,
.layout-tv .detailRibbon {
  background: rgba(255,255,255,.1) !important;
  height: 6em;
}
.itemBackdrop::after {
  background: rgba(0,0,0,.1) !important;
}

/*Homepage modifications, transparent footerplayer and fixed sectiontitles*/
.appfooter {
	background: rgba(0,0,0,0.9);
}
.button-flat:hover {
	background: rgba(0,0,0,0.9);
}

/*Theme the library scan progress bar*/
progress {
  background: rgba(0, 0, 0, 0.5) !important;
  border: 1px solid rgba(255, 255, 255, 0.22);
}
progress::-webkit-progress-bar {
  background: rgba(0, 0, 0, 0.5) !important;
  border: 0px solid rgba(255, 255, 255, 0.22);
}
progress::-moz-progress-bar {
  background-color: rgba(255,255,255,0.75);
}
progress::-webkit-progress-value {
  background-color: rgba(255,255,255,0.75);
}
#divRunningTasks span {
  color: rgba(255,255,255,0.75) !important;
}
.taskProgressOuter {
  background: rgba(0, 0, 0, 0.5) !important;
  border: 1px solid rgba(255, 255, 255, 0.22);
}
.taskProgressInner {
  background: rgba(255,255,255,0.75) !important;
}
#scheduledTasksPage span {
  color: rgba(255,255,255,0.75) !important;
}

/*Login background*/
#loginPage {
  background: url(https://i.imgur.com/3JRhFzi.jpeg) !important; 
  background-size: cover !important;
}

/*Make watched icon, footer on chapter thumbnails (and other things), and count indicator dark and transparent*/
.innerCardFooter {
  background: #2f1b57b8;
  box-shadow: none;
  color: rgb(--accent);
}
/* ... */

